<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_main"
    tools:context=".MainFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/blooddonationimage"
                android:elevation="15dp"
                android:alpha="0.7"
                android:scaleType="centerCrop"
                android:contentDescription="blood donation image" />
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bloodintro"
                android:layout_margin="8dp"
                android:textSize="16dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blood cannot be manufactured--"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bloodmanufactur"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enhances heart health"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/healthproblem"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_margin="8dp"/>
            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Joy of Donating Blood"
                android:layout_margin="8dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joyofdonatingblood"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_margin="8dp"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>